sock-shop/base/front-end-ing-cont.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
        - name: alb-ingress-controller
          args:            
            - --ingress-class=alb
            - --cluster-name=dev-eks-cluster
            - --aws-vpc-id=vpc-001d8363de5682eba
            - --aws-region=ca-central-1
          image: docker.io/amazon/aws-alb-ingress-controller:latest
          imagePullPolicy: IfNotPresent
      serviceAccountName: alb-ingress-controller
