sock-shop/base/front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  annotations:
    kubernetes.io/role/elb: "1"
    kubernetes.io/ingress.class: alb
  labels:
    name: front-end
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8079
    nodePort: 30001
  selector:
    name: front-end
