sock-shop/base/rabbitmq-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
  - port: 15672
    name: management
    targetPort: 15672
    nodePort: 30002
  - port: 5672
    name: rabbitmq
    targetPort: 5672
  - port: 9090
    name: exporter
    targetPort: exporter
    protocol: TCP
  selector:
    name: rabbitmq
