sock-shop/base/front-end-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-end-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ca-central-1:453923235837:certificate/8871e52b-4ffa-43e9-a958-d49016273ffe"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: front-end
          servicePort: 80
